# desafio-1-1s-vs-3j

./: .htaccess  Insomnia_2025-05-12.yaml  index.js  pom.xml
Resultado Juniors/: index.js
ResultadoDanilo/: composer.json  index.php
ResultadoDanilo/src/Utils/: HttpResponses.php  JsonServices.php  TimeControlServices.php
ResultadoDanilo/src/controllers/: EvaluationController.php  FileController.php  LoginController.php  UsuariosController.php
ResultadoDanilo/src/models/: Equipe.php  Log.php  Projeto.php  Usuario.php
ResultadoDanilo/src/rn/: RnLogin.php  RnUsuarios.php
ResultadoDanilo/testes/: Desafio codecon 1s-vs-3j.postman_collection.json
felipebarroscruz/: .gitignore  README.md  index.js  package.json
felipebarroscruz/docs/: insomnia.json
felipebarroscruz/nodejs/: package.json
felipebarroscruz/nodejs/src/: index.js
felipebarroscruz/rust/: Cargo.toml  Makefile
felipebarroscruz/rust/src/: main.rs
renatofialho/api-codecon/api-codecon/: build.gradle.kts  settings.gradle.kts
ronanzindev/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
ronanzindev/controllers/: auto_avaliacao.go  timing.go  usuario.go
ronanzindev/models/: equipe.go  insight.go  log.go  projeto.go  resposta.go  usuario.go
ronanzindev/repository/: usuario.go
ronanzindev/services/: analise.go
ronanzindev/utils/: error.go
src/main/java/com/claudes/: Application.java
src/main/resources/: application.properties
src/test/java/com/claudes/: Desafio1sVs3jApplicationTests.java
theuszastro/: index.js  package.json  upload.js
(+29 files in other folders)
