[package]
name = "user-management-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lazy_static = "1.4"
parking_lot = "0.12"
itertools = "0.12" 
bytes = "1.10.1"
paste = "1.0"
memoize = "0.5.1"
